# ROFramework-PyLib

./: IMPLEMENTATION_SUMMARY.md  PHASE4_PRIORITY1_COMPLETE.md  PHASE4_PRIORITY2_COMPLETE.md  README.md  external_evaluator_AI.md  pyproject.toml
examples/: 01_basic_observer.py  04_memory_temporal_correlation.py  05_consciousness_evaluation.py  README.md
src/ro_framework/: __init__.py  version.py
src/ro_framework/core/: __init__.py  dof.py  state.py  value.py
src/ro_framework/observer/: __init__.py  mapping.py  observer.py
tests/: __init__.py
tests/unit/: __init__.py  test_consciousness_integration.py  test_dof.py  test_memory_integration.py  test_observer.py  test_state.py
